fix overflow + add invalid country name to legend

--- a/css/lineChart.css
+++ b/css/lineChart.css
@@ -3,7 +3,7 @@
   }
 
   #linechart {
-    overflow: visible;
+    overflow-y: visible;
   }
   
   .axis path,
